plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

dependencies {
    compileOnly "carpet:fabric-carpet:${project.mc1211_carpet_version}"
    compileOnly "com.google.code.gson:gson:2.11.0"
    compileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
    compileOnly "org.slf4j:slf4j-api:2.0.17"
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
    testImplementation "com.google.code.gson:gson:2.11.0"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.10.2"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
